--- a/pages/contact/contact.scss
+++ b/pages/contact/contact.scss
@@ -496,6 +496,12 @@ html, body {
     max-width: 415px;
   }
 
+  .form_callback {
+    max-width: 100%;
+    width: 100%;
+    padding: 142px 218px;
+  }
+
   .form__header{
     padding: 0;
     margin: 0;
@@ -504,6 +510,15 @@ html, body {
     font-size: 24px;
     font-weight: bold;
     color: white;
+  }
+
+  .form__header_callback {
+    margin-bottom: 66px;
+
+    font-size: 36px;
+    text-align: center;
+    line-height: 120%;
+    color: $regularHeaderColor;
   }
 
   .form__input {
@@ -515,15 +530,47 @@ html, body {
     color: $regularTextColor;
 
     border: 0;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-radius: 3px;
 
     padding: 15px;
     margin-bottom: 28px;
 
+    &:focus {
+      outline: none;
+    }
+
     @include placeholderStyles {
       color: $formPlaceholderColor;
     }
+  }
+
+  .form__input_callback {
+    margin: 0 auto 23px;
+
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: -1px;
+
+    color: $callbackFormPlaceholderColor;
+
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid $callbackFormInputBorder;
+
+    &:focus {
+      @include placeholderStyles {
+        color: rgba($callbackFormPlaceholderColor, .5);
+      }
+    }
+
+    @include placeholderStyles {
+      color: $callbackFormPlaceholderColor;
+    }
+  }
+
+  .form__input_last {
+    margin-bottom: 69px;
   }
 
   .form__input_message {
@@ -531,21 +578,36 @@ html, body {
     margin-bottom: 4px;
   }
 
+  .form__center {
+    max-width: 415px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
   .form__submit {
     max-width: 415px;
     width: 100%;
     height: 48px;
 
-    font-size: 13px;
+    font-size: 14px;
     font-weight: bold;
     color: white;
     background-color: $formSubmitColor;
 
     border: 0;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-radius: 3px;
 
     cursor: pointer;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .form__submit_callback {
+    margin: 0 auto;
+
+    background-color: $formSubmitColor;
   }
 
   @media all and (max-width: $tabletExtension) {
@@ -557,6 +619,28 @@ html, body {
 
     .form__input_message {
       height: 130px;
+    }
+
+    .form_callback {
+      padding: 66px 20px;
+    }
+
+    .form__header_callback {
+      margin-bottom: 13px;
+
+      font-size: 24px;
+      line-height: 125%;
+      word-spacing: 3px;
+    }
+
+    .form__input_callback {
+      margin: 0 auto 3px;
+
+      font-size: 14px;
+    }
+
+    .form__input_last {
+      margin-bottom: 32px;
     }
 
   }
@@ -648,96 +732,6 @@ html, body {
 
     .callback__button {
       display: block;
-    }
-
-  }
-
-  // Callback pop-up
-  .callback-form {
-    padding: 108px 218px;
-  }
-
-  .callback-form__header {
-    margin-bottom: 66px;
-
-    font-size: 36px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 120%;
-    color: $regularHeaderColor;
-  }
-
-  .callback-form__input {
-    display: block;
-    max-width: 415px;
-    width: 100%;
-    height: 48px;
-    margin: 0 auto 23px;
-
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    letter-spacing: -1px;
-
-    color: $callbackFormPlaceholderColor;
-
-    border: 0;
-    border-bottom: 1px solid $callbackFormInputBorder;
-
-    &:focus {
-      outline: none;
-    }
-
-    @include placeholderStyles {
-      color: $callbackFormPlaceholderColor;
-    }
-  }
-
-  .callback-form__input_last {
-    margin-bottom: 69px;
-  }
-
-  .callback-form__submit {
-    display: block;
-    margin: 0 auto;
-    border: 0;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-
-    font-size: 14px;
-    font-weight: bold;
-    color: white;
-
-    max-width: 415px;
-    width: 100%;
-    height: 48px;
-
-    background-color: $callbackFormSubmitBgc;
-    cursor: pointer;
-  }
-
-  @media all and (max-width: $tabletExtension) {
-
-    .callback-form {
-      padding: 42px 20px;
-    }
-
-    .callback-form__header {
-      margin-bottom: 13px;
-
-      font-size: 24px;
-      line-height: 125%;
-      word-spacing: 3px;
-    }
-
-    .callback-form__input {
-      margin: 0 auto 3px;
-
-      font-size: 14px;
-    }
-
-    .callback-form__input_last {
-      margin-bottom: 32px;
     }
 
   }
