--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -131,13 +131,6 @@ html, body {
   [class='contact-page'] .content__image {
     width: 100%;
     height: 100%; }
-  [class='contact-page'] .content__close {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    position: absolute;
-    right: 24px;
-    top: 26px; }
   [class='contact-page'] .content__section {
     margin: 0;
     padding: 0;
@@ -165,6 +158,14 @@ html, body {
     background-color: #fff; }
   [class='contact-page'] .content__section_invisible {
     display: none; }
+  [class='contact-page'] .content__close {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    right: 24px;
+    top: 26px;
+    z-index: 2; }
   @media all and (max-width: 750px) {
     [class='contact-page'] .content__section {
       max-width: 100%; }
