--- a/pages/help/help.css
+++ b/pages/help/help.css
@@ -133,21 +133,38 @@ html, body {
     padding: 0;
     display: inline-block; }
   [class='help-page'] .content__section_questions {
-    padding: 36px 107px 0 57px; }
+    width: 100%;
+    padding: 36px 107px 17px 57px;
+    overflow: hidden; }
+  @media all and (max-width: 1000px) {
+    [class='help-page'] .content__section_questions {
+      padding-left: 25px;
+      padding-right: 10px; } }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .content__section_questions {
+      padding: 40px 21px 17px 19px; } }
   [class='help-page'] .search {
     width: 100%;
     height: 94px;
     background-color: #06ad9f; }
   [class='help-page'] .search__paddings {
-    padding: 22px 21px 25px 75px; }
+    padding: 22px 5px 25px 75px; }
+  @media all and (max-width: 1000px) {
+    [class='help-page'] .search__paddings {
+      padding-left: 25px;
+      padding-right: 10px; } }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .search {
+      height: 176px; }
+    [class='help-page'] .search__paddings {
+      padding: 32px 20px 27px 20px; } }
   [class='help-page'] .search-help {
     height: 48px;
     width: 100%;
     overflow: hidden; }
   [class='help-page'] .search-help__slogan {
-    width: 133px;
     height: 100%;
-    margin-right: 64px;
+    width: 21%;
     display: inline-block;
     vertical-align: middle; }
     [class='help-page'] .search-help__slogan:before {
@@ -174,11 +191,11 @@ html, body {
   [class='help-page'] .search-help__input {
     display: inline-block;
     vertical-align: middle;
-    max-width: 585px;
-    width: 100%;
-    height: 100%;
+    width: 62%;
+    height: 48px;
     padding: 0 14px;
     word-spacing: 1px;
+    border: 0;
     font-size: 14px;
     color: #333333;
     /* Firefox 19+ */
@@ -208,14 +225,35 @@ html, body {
     padding: 0;
     display: inline-block;
     vertical-align: middle;
-    max-width: 146px;
-    width: 100%;
-    height: 100%;
+    width: 16%;
+    height: 48px;
     font-size: 14px;
     font-weight: bold;
     color: white;
     border: 0;
     background-color: #FF5A5F; }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .search-help {
+      height: 100%; }
+    [class='help-page'] .search-help__slogan {
+      display: none; }
+    [class='help-page'] .search-help__input {
+      margin-bottom: 21px; }
+    [class='help-page'] .search-help__input, [class='help-page'] .search-help__submit {
+      width: 100%; } }
+  [class='help-page'] .categories {
+    display: inline-block;
+    height: 100%;
+    width: 25%;
+    float: left; }
+  [class='help-page'] .categories__title {
+    margin: 0;
+    padding: 0;
+    display: none;
+    margin-bottom: 28px;
+    font-size: 18px;
+    font-weight: normal;
+    color: #333333; }
   [class='help-page'] .categories__list {
     padding: 0;
     list-style-type: none; }
@@ -255,6 +293,62 @@ html, body {
     background-color: #00BEAE; }
     [class='help-page'] .categories__link_active:after {
       opacity: 0; }
+  @media all and (max-width: 1000px) {
+    [class='help-page'] .categories {
+      width: 30%; } }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .categories {
+      float: none;
+      width: 100%; }
+    [class='help-page'] .categories__title {
+      display: block;
+      margin-bottom: 14px; }
+    [class='help-page'] .categories__link {
+      padding-left: 9px;
+      left: -10px; } }
+  [class='help-page'] .faq {
+    width: 75%;
+    height: 100%;
+    display: inline-block;
+    float: right; }
+  [class='help-page'] .faq__header {
+    margin: 0;
+    margin-bottom: 28px;
+    padding: 0;
+    font-size: 24px;
+    font-weight: normal;
+    color: #333333; }
+  [class='help-page'] .faq__text {
+    text-transform: capitalize; }
+  @media all and (max-width: 1000px) {
+    [class='help-page'] .faq {
+      width: 70%; }
+    [class='help-page'] .faq__header {
+      font-size: 18px; } }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .faq {
+      float: none;
+      width: 100%; }
+    [class='help-page'] .faq__header {
+      margin-bottom: 20px; }
+    [class='help-page'] .faq__category {
+      display: none; } }
+  [class='help-page'] .question {
+    margin-bottom: 28px;
+    font-size: 14px; }
+  [class='help-page'] .question__title {
+    margin: 0;
+    margin-bottom: 17px;
+    padding: 0;
+    font-weight: bold; }
+  [class='help-page'] .question__answer {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    line-height: 142%; }
+  @media all and (max-width: 750px) {
+    [class='help-page'] .question__title {
+      margin-bottom: 15px; } }
   [class='help-page'] .footer {
     height: 280px;
     width: 100%;
