--- a/pages/contact/contact.scss
+++ b/pages/contact/contact.scss
@@ -101,8 +101,6 @@ html, body {
     height: 100%;
     margin: 0 auto;
     font-size: 0;
-
-    position: relative;
   }
 
   .container__left {
@@ -365,6 +363,8 @@ html, body {
 
     width: 100%;
     height: 100%;
+
+    position: relative;
   }
 
   .article__header {
@@ -402,12 +402,42 @@ html, body {
   }
 
   .article__link_red {
-    color: #FF5A5F;
+    color: $orangered;
     font-size: 24px;
     font-weight: bold;
     letter-spacing: 0.006em; // who knows?
     vertical-align: middle;
     height: 29px;
+
+    transition: color .5s ease;
+
+    &:hover {
+      color: rgba($orangered, .8);
+    }
+  }
+
+  .article__link_social {
+    height: 100%;
+    border-radius: 50%;
+    vertical-align: middle;
+    text-align: center;
+    line-height: 65px;
+  }
+
+  .article__link_social-fb {
+    background-color: #395799;
+  }
+
+  .article__link_social-tw {
+    background-color: #21A8EF;
+  }
+
+  .article__link_social-vk {
+    background-color: #4E75A0;
+  }
+
+  .article__link_social-google {
+    background-color: #D34231;
   }
 
   .article__icon {
@@ -440,16 +470,25 @@ html, body {
   }
 
   .article__item_contacts {
+    display: block;
     margin-bottom: 5px;
   }
 
   .article__social {
     padding: 0;
-    margin-left: -4px;
     letter-spacing: 12px;
+
+    position: absolute;
+    left: -4px;
   }
 
   .article__item_social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+  }
+
+  .article__image {
     display: inline-block;
   }
 
@@ -481,13 +520,22 @@ html, body {
     }
 
     .article__image {
+      width: 40%;
+      height: 41%;
+    }
+
+    .article__social {
+      left: 0;
+      letter-spacing: 10px;
+    }
+
+    .article__item_social {
       width: 36px;
       height: 36px;
     }
 
-    .article__social {
-      margin-left: 0;
-      letter-spacing: 10px;
+    .article__link_social {
+      line-height: 48px;
     }
 
   }
@@ -539,6 +587,10 @@ html, body {
 
     &:focus {
       outline: none;
+
+      @include placeholderStyles {
+        color: rgba($formPlaceholderColor, 0.5);
+      }
     }
 
     @include placeholderStyles {
@@ -595,6 +647,7 @@ html, body {
     font-weight: bold;
     color: white;
     background-color: $formSubmitColor;
+    transition: background-color .5s ease;
 
     border: 0;
     border-radius: 3px;
@@ -603,6 +656,10 @@ html, body {
 
     &:focus {
       outline: none;
+    }
+
+    &:hover {
+      background-color: rgba($formSubmitColor, .9);
     }
   }
 
