--- a/pages/help/help.css
+++ b/pages/help/help.css
@@ -25,7 +25,7 @@ html, body {
     height: 100%;
     margin: 0 auto;
     font-size: 0;
-    position: relative; }
+    overflow: hidden; }
   [class='help-page'] .container__left {
     width: 50%;
     height: 100%;
@@ -185,9 +185,7 @@ html, body {
     height: 16px;
     margin-left: 17px;
     display: inline-block;
-    vertical-align: middle;
-    background-image: url(../../images/help-page/search-help__arrow.svg);
-    background-repeat: no-repeat; }
+    vertical-align: middle; }
   [class='help-page'] .search-help__input {
     display: inline-block;
     vertical-align: middle;
@@ -270,12 +268,8 @@ html, body {
     padding-right: 27px;
     color: inherit;
     text-decoration: none;
-    position: relative; }
-    [class='help-page'] .categories__link:before {
-      content: '';
-      display: inline-block;
-      height: 100%;
-      vertical-align: middle; }
+    position: relative;
+    line-height: 33px; }
     [class='help-page'] .categories__link:after {
       content: '';
       position: absolute;
@@ -292,7 +286,8 @@ html, body {
     color: white;
     background-color: #00BEAE; }
     [class='help-page'] .categories__link_active:after {
-      opacity: 0; }
+      transition: none;
+      background: transparent; }
   @media all and (max-width: 1000px) {
     [class='help-page'] .categories {
       width: 30%; } }
@@ -311,6 +306,10 @@ html, body {
     height: 100%;
     display: inline-block;
     float: right; }
+  [class='help-page'] .faq__section {
+    display: block; }
+  [class='help-page'] .faq__section_invisible {
+    display: none; }
   [class='help-page'] .faq__header {
     margin: 0;
     margin-bottom: 28px;
@@ -320,6 +319,8 @@ html, body {
     color: #333333; }
   [class='help-page'] .faq__text {
     text-transform: capitalize; }
+  [class='help-page'] .faq__categories {
+    text-transform: lowercase; }
   @media all and (max-width: 1000px) {
     [class='help-page'] .faq {
       width: 70%; }
@@ -331,7 +332,7 @@ html, body {
       width: 100%; }
     [class='help-page'] .faq__header {
       margin-bottom: 20px; }
-    [class='help-page'] .faq__category {
+    [class='help-page'] .faq__categories {
       display: none; } }
   [class='help-page'] .question {
     margin-bottom: 28px;
@@ -340,6 +341,7 @@ html, body {
     margin: 0;
     margin-bottom: 17px;
     padding: 0;
+    font-size: 14px;
     font-weight: bold; }
   [class='help-page'] .question__answer {
     margin: 0;
