--- a/pages/help/help.scss
+++ b/pages/help/help.scss
@@ -91,8 +91,7 @@ html, body {
     height: 100%;
     margin: 0 auto;
     font-size: 0;
-
-    position: relative;
+    overflow: hidden;
   }
 
   .container__left {
@@ -355,8 +354,6 @@ html, body {
     display: inline-block;
     vertical-align: middle;
 
-    background-image: url(../../images/help-page/search-help__arrow.svg);
-    background-repeat: no-repeat;
   }
 
   .search-help__input {
@@ -467,8 +464,9 @@ html, body {
     text-decoration: none;
 
     position: relative;
+    line-height: 33px;
 
-    @include verticalMiddle;
+    //@include verticalMiddle;
 
     &:after {
       content: '';
@@ -492,7 +490,8 @@ html, body {
     background-color: $categoriesItemBgc;
 
     &:after {
-      opacity: 0;
+      transition: none;
+      background: transparent;
     }
   }
 
@@ -527,6 +526,14 @@ html, body {
     display: inline-block;
     float: right;
   }
+  
+  .faq__section {
+    display: block;
+  }
+  
+  .faq__section_invisible {
+    display: none;
+  }
 
   .faq__header {
     margin: 0;
@@ -540,6 +547,10 @@ html, body {
   
   .faq__text {
     text-transform: capitalize;
+  }
+  
+  .faq__categories {
+    text-transform: lowercase;
   }
 
   @media all and (max-width: $littleDesktopExtension) {
@@ -563,7 +574,7 @@ html, body {
     }
 
     // !!!!
-    .faq__category {
+    .faq__categories {
       display: none;
     }
   }
@@ -578,6 +589,7 @@ html, body {
     margin: 0;
     margin-bottom: 17px;
     padding: 0;
+    font-size: 14px;
     font-weight: bold;
   }
 
