--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -16,7 +16,7 @@ html, body {
   font-family: 'Roboto', sans-serif; }
 
 .page-container {
-  min-height: calc(100% - 280px); }
+  min-height: calc(100% - 392px); }
 
 [class='home-page'] {
   height: 100%; }
@@ -26,6 +26,8 @@ html, body {
     margin: 0 auto;
     font-size: 0;
     overflow: hidden; }
+  [class='home-page'] .container_info {
+    max-width: 1034px; }
   [class='home-page'] .container__left {
     width: 50%;
     height: 100%;
@@ -177,7 +179,7 @@ html, body {
     padding-bottom: 136px; }
     [class='home-page'] .section_slider .section__header {
       margin: 0 auto 42px;
-      width: 600px;
+      width: 46.875%;
       font-size: 48px;
       font-weight: bold;
       color: #fff;
@@ -194,6 +196,7 @@ html, body {
     [class='home-page'] .section_countries .section__header {
       margin-bottom: 42px; }
     [class='home-page'] .section_countries .section__link {
+      width: 18.046875%;
       margin-right: 20px; }
       [class='home-page'] .section_countries .section__link:last-of-type {
         margin-right: 0; }
@@ -247,56 +250,37 @@ html, body {
       [class='home-page'] .section_promo .section__link:hover {
         background-color: #e65156; }
   [class='home-page'] .section_organizations {
+    padding-top: 35px;
+    padding-bottom: 46px;
     background-color: #48B29E; }
     [class='home-page'] .section_organizations .section__slogan {
       max-width: 820px;
       margin: 0 auto;
-      margin-bottom: 39px;
+      margin-bottom: 40px;
       font-size: 14px;
       text-align: center;
       font-weight: normal;
       color: #333333; }
-    [class='home-page'] .section_organizations .section__list {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      text-align: center; }
-    [class='home-page'] .section_organizations .section__item {
-      display: inline-block;
-      width: 260px;
-      margin-bottom: 40px;
-      overflow: hidden; }
-    [class='home-page'] .section_organizations .section__pic {
-      display: inline-block;
-      margin-right: 15px;
-      width: 50px;
-      height: 50px;
-      vertical-align: middle;
-      border-radius: 50%;
-      background-color: #F2F2F2; }
-    [class='home-page'] .section_organizations .section__description {
-      display: inline-block;
-      width: 156px;
-      vertical-align: middle;
-      text-align: left;
-      font-size: 14px;
-      font-weight: normal;
-      color: #333333; }
+    [class='home-page'] .section_organizations .section__content {
+      text-align: center;
+      margin-bottom: 40px; }
+      [class='home-page'] .section_organizations .section__content:last-of-type {
+        margin-bottom: 0; }
   [class='home-page'] .section_patients {
-    padding-top: 68px;
+    padding-top: 54px;
     padding-bottom: 59px; }
     [class='home-page'] .section_patients .section__header {
       margin-bottom: 47px; }
     [class='home-page'] .section_patients .section__content {
       text-align: center; }
   [class='home-page'] .section_info {
-    padding: 16px 123px 28px;
+    padding: 18px 123px 28px;
     color: white;
     background-color: #48B29E;
     overflow: hidden; }
     [class='home-page'] .section_info .section__slogan {
       font-size: 18px;
-      margin-bottom: 7px;
+      margin-bottom: 8px;
       font-weight: bold; }
     [class='home-page'] .section_info .section__text {
       font-size: 14px;
@@ -320,7 +304,7 @@ html, body {
       [class='home-page'] .section_info .section__link:hover {
         background-color: #398e7e; }
   [class='home-page'] .section_reviews {
-    padding-top: 49px;
+    padding-top: 41px;
     padding-bottom: 52px; }
     [class='home-page'] .section_reviews .section__header {
       margin-bottom: 39px; }
@@ -340,9 +324,10 @@ html, body {
     margin: 0;
     font-size: 14px; }
   [class='home-page'] .article_country {
-    width: 231px;
-    height: 231px;
-    padding: 94px 0 0 0;
+    width: 100%;
+    max-height: 231px;
+    vertical-align: top;
+    padding: 94px 0 60px 0;
     display: inline-block;
     position: relative;
     color: #fff; }
@@ -488,6 +473,26 @@ html, body {
       display: block;
       background: url("../../images/home-page/checked-star.svg") no-repeat;
       position: absolute; }
+  [class='home-page'] .article_organization {
+    display: inline-block;
+    width: 260px;
+    overflow: hidden; }
+    [class='home-page'] .article_organization .article__pic {
+      display: inline-block;
+      margin-right: 15px;
+      width: 50px;
+      height: 50px;
+      vertical-align: middle;
+      border-radius: 50%;
+      background-color: #F2F2F2; }
+    [class='home-page'] .article_organization .article__text {
+      display: inline-block;
+      width: 156px;
+      vertical-align: middle;
+      text-align: left;
+      font-size: 14px;
+      font-weight: normal;
+      color: #333333; }
   [class='home-page'] .slider__panel {
     width: 232px;
     margin: 0 auto; }
@@ -542,7 +547,7 @@ html, body {
     text-align: center; }
   [class='home-page'] .form__input {
     margin-right: 0;
-    width: 400px;
+    width: 31.25%;
     height: 48px;
     padding: 0 16px;
     border: 0;
@@ -571,10 +576,10 @@ html, body {
     [class='home-page'] .form__input:-ms-input-placeholder {
       color: #828282; }
   [class='home-page'] .form__input_country {
-    width: 312px; }
+    width: 24.375%; }
   [class='home-page'] .form__submit {
     height: 48px;
-    width: 107px;
+    width: 8.359375%;
     vertical-align: top;
     border: 0;
     background-color: #FF5A5F;
@@ -587,8 +592,138 @@ html, body {
     [class='home-page'] .form__submit:hover {
       background-color: #e65156; }
   [class='home-page'] .footer {
-    height: 280px;
     width: 100%;
+    height: auto;
+    padding-top: 33px;
+    padding-bottom: 33px;
     background-color: #F2F2F2; }
+  [class='home-page'] .footer__text {
+    margin: 0; }
+  [class='home-page'] .footer__link {
+    width: 100%;
+    height: 100%;
+    display: inline-block; }
+  [class='home-page'] .footer__image {
+    width: 100%;
+    height: 100%; }
+  [class='home-page'] .footer__logo {
+    width: 47px;
+    height: 44px; }
+  [class='home-page'] .footer__slogan {
+    margin: 0; }
+  [class='home-page'] .footer__menu {
+    padding-top: 50px;
+    padding-bottom: 30px; }
+  [class='home-page'] .footer__list {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    list-style: none;
+    vertical-align: top;
+    display: inline-block;
+    color: #4F4F4F; }
+    [class='home-page'] .footer__list .footer__text {
+      color: #BDBDBD;
+      margin-bottom: 14px;
+      font-weight: normal; }
+    [class='home-page'] .footer__list .footer__link {
+      width: auto;
+      color: inherit;
+      text-decoration: none; }
+  [class='home-page'] .footer__item {
+    margin-bottom: 10px; }
+  [class='home-page'] .footer__copyright .footer__text {
+    color: #BDBDBD;
+    font-size: 14px;
+    text-align: center; }
+  [class='home-page'] .footer__copyright .footer__link {
+    width: auto;
+    color: #48B29E;
+    text-decoration: none; }
+  [class='home-page'] .footer__content {
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0 10px;
+    max-width: 1034px; }
+  [class='home-page'] .footer__content_justify {
+    text-align: justify; }
+    [class='home-page'] .footer__content_justify:after {
+      content: '';
+      width: 100%;
+      text-align: justify;
+      display: inline-block; }
+  [class='home-page'] .footer__info {
+    float: left; }
+    [class='home-page'] .footer__info .footer__logo {
+      margin-right: 1px;
+      display: inline-block;
+      vertical-align: middle; }
+    [class='home-page'] .footer__info .footer__phone {
+      margin-left: 6px;
+      position: relative;
+      padding-left: 15px;
+      margin-right: 10px;
+      vertical-align: middle;
+      display: inline-block; }
+      [class='home-page'] .footer__info .footer__phone:before {
+        top: 0;
+        left: 0;
+        border: 0;
+        content: '';
+        position: absolute;
+        display: inline-block;
+        border-top: 15px solid #56CCF2;
+        border-left: 16px solid transparent; }
+    [class='home-page'] .footer__info .footer__text {
+      color: #fff;
+      width: 216px;
+      height: 40px;
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 40px;
+      text-align: center;
+      display: inline-block;
+      vertical-align: middle;
+      background-color: #56CCF2; }
+    [class='home-page'] .footer__info .footer__slogan {
+      width: 350px;
+      font-size: 18px;
+      font-weight: normal;
+      display: inline-block;
+      vertical-align: middle;
+      color: #333333; }
+  [class='home-page'] .footer__contacts {
+    float: right;
+    line-height: 40px; }
+    [class='home-page'] .footer__contacts .footer__link {
+      margin-left: 5px;
+      text-align: center;
+      line-height: 40px;
+      vertical-align: middle; }
+  [class='home-page'] .footer__link_email {
+    color: #fff;
+    width: 149px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: #FF5A5F; }
+  [class='home-page'] .footer__link_vk {
+    width: 40px;
+    height: 40px;
+    background-color: #4E75A0; }
+    [class='home-page'] .footer__link_vk .footer__image {
+      width: 20px;
+      height: 16px;
+      vertical-align: middle; }
+  [class='home-page'] .footer__link_fb {
+    width: 40px;
+    height: 40px;
+    background-color: #395799; }
+    [class='home-page'] .footer__link_fb .footer__image {
+      width: 14px;
+      height: 20px;
+      vertical-align: middle; }
 
 /*# sourceMappingURL=home.css.map */
