--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -3,6 +3,7 @@
 
 // Variables
 $screenWidth: 1280px;
+$smallContainer: 1034px;
 
 $aqua: #00BEAE;
 $yellow: #F4C900;
@@ -76,7 +77,7 @@ html, body {
 }
 
 .page-container {
-  min-height: calc(100% - 280px);
+  min-height: calc(100% - 392px);
 }
 
 [class='home-page'] {
@@ -89,6 +90,10 @@ html, body {
     margin: 0 auto;
     font-size: 0;
     overflow: hidden;
+  }
+
+  .container_info {
+    max-width: $smallContainer;
   }
 
   .container__left {
@@ -297,6 +302,7 @@ html, body {
     display: inline-block;
   }
 
+  // Fix: make it right
   .section__mark {
     display: inline-block;
     overflow: hidden;
@@ -332,7 +338,7 @@ html, body {
 
     .section__header {
       margin: 0 auto 42px;
-      width: 600px; //737px;
+      width: 46.875%; // 600px;
       font-size: 48px;
       font-weight: bold;
       color: #fff;
@@ -358,6 +364,7 @@ html, body {
     }
 
     .section__link {
+      width: 18.046875%;
       margin-right: 20px;
 
       &:last-of-type {
@@ -380,6 +387,10 @@ html, body {
     
     .section__content {
       text-align: center;
+    }
+
+    .section__link {
+
     }
 
     .section__header {
@@ -441,55 +452,66 @@ html, body {
   }
   
   .section_organizations {
+    padding-top: 35px;
+    padding-bottom: 46px;
     background-color: $sectionGreen;
 
     .section__slogan {
       max-width: 820px;
       margin: 0 auto;
-      margin-bottom: 39px;
-      font-size: 14px;
-      text-align: center;
-      font-weight: normal;
-      color: $regularTextColor;
-    }
-
-    .section__list {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      text-align: center;
-    }
-
-    .section__item {
-      display: inline-block;
-      width: 260px;
       margin-bottom: 40px;
-      overflow: hidden;
-    }
-
-    .section__pic {
-      display: inline-block;
-      margin-right: 15px;
-      width: 50px;
-      height: 50px;
-      vertical-align: middle;
-      border-radius: 50%;
-      background-color: $contentBg;
-    }
-
-    .section__description {
-      display: inline-block;
-      width: 156px;
-      vertical-align: middle;
-      text-align: left;
       font-size: 14px;
+      text-align: center;
       font-weight: normal;
       color: $regularTextColor;
     }
+    
+    .section__content {
+      text-align: center;
+      margin-bottom: 40px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+
+    //.section__list {
+    //  margin: 0;
+    //  padding: 0;
+    //  width: 100%;
+    //  text-align: center;
+    //}
+    //
+    //.section__item {
+    //  display: inline-block;
+    //  width: 260px;
+    //  margin-bottom: 40px;
+    //  overflow: hidden;
+    //}
+    //
+    //.section__pic {
+    //  display: inline-block;
+    //  margin-right: 15px;
+    //  width: 50px;
+    //  height: 50px;
+    //  vertical-align: middle;
+    //  border-radius: 50%;
+    //  background-color: $contentBg;
+    //}
+    //
+    //.section__description {
+    //  display: inline-block;
+    //  width: 156px;
+    //  vertical-align: middle;
+    //  text-align: left;
+    //  font-size: 14px;
+    //  font-weight: normal;
+    //  color: $regularTextColor;
+    //}
   }
   
   .section_patients {
-    padding-top: 68px;
+    padding-top: 54px;
     padding-bottom: 59px;
 
     .section__header {
@@ -502,14 +524,14 @@ html, body {
   }
   
   .section_info {
-    padding: 16px 123px 28px;
+    padding: 18px 123px 28px;
     color: white;
     background-color: $sectionGreen;
     overflow: hidden;
 
     .section__slogan {
       font-size: 18px;
-      margin-bottom: 7px;
+      margin-bottom: 8px;
       font-weight: bold;
     }
 
@@ -546,7 +568,7 @@ html, body {
   }
 
   .section_reviews {
-    padding-top: 49px;
+    padding-top: 41px;
     padding-bottom: 52px;
 
     .section__header {
@@ -585,9 +607,11 @@ html, body {
   }
 
   .article_country {
-    width: 231px;
-    height: 231px;
-    padding: 94px 0 0 0;
+    //max-width: 231px;
+    width: 100%;
+    max-height: 231px;
+    vertical-align: top;
+    padding: 94px 0 60px 0;
     display: inline-block;
     position: relative;
     color: #fff;
@@ -634,6 +658,7 @@ html, body {
   .article_treatment {
     display: inline-block;
     width: 256px;
+    //max-height: 300px;
     background-color: #fff;
     color: #000;
     overflow: hidden;
@@ -815,6 +840,32 @@ html, body {
 
   }
 
+  .article_organization {
+    display: inline-block;
+    width: 260px;
+    overflow: hidden;
+
+    .article__pic {
+      display: inline-block;
+      margin-right: 15px;
+      width: 50px;
+      height: 50px;
+      vertical-align: middle;
+      border-radius: 50%;
+      background-color: $contentBg;
+    }
+
+    .article__text {
+      display: inline-block;
+      width: 156px;
+      vertical-align: middle;
+      text-align: left;
+      font-size: 14px;
+      font-weight: normal;
+      color: $regularTextColor;
+    }
+  }
+
   // Slider
   .slider {
 
@@ -905,7 +956,7 @@ html, body {
 
   .form__input {
     margin-right:0;
-    width: 400px;
+    width: 31.25%; // 400px;
     height: 48px;
     padding: 0 16px;
     border: 0;
@@ -926,12 +977,12 @@ html, body {
   }
 
   .form__input_country {
-    width: 312px;
+    width: 24.375%; // 312px;
   }
 
   .form__submit {
     height: 48px;
-    width: 107px;
+    width: 8.359375%; // 107px;
     vertical-align: top;
     border: 0;
     background-color: $orangered;
@@ -954,8 +1005,199 @@ html, body {
 
   // FOOTER
   .footer {
-    height: 280px;
     width: 100%;
+    height: auto;
+    padding-top: 33px;
+    padding-bottom: 33px;
     background-color: $footerBgColor;
   }
+
+  .footer__text {
+    margin: 0;
+  }
+
+  .footer__link {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+  }
+
+  .footer__image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .footer__logo {
+    width: 47px;
+    height: 44px;
+  }
+
+  .footer__slogan {
+    margin: 0;
+  }
+
+  .footer__menu {
+    padding-top: 50px;
+    padding-bottom: 30px;
+  }
+
+  .footer__list {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    list-style: none;
+    vertical-align: top;
+    display: inline-block;
+    color: $regularHeaderColor;
+
+    .footer__text {
+      color: #BDBDBD;
+      margin-bottom: 14px;
+      font-weight: normal;
+    }
+
+    .footer__link {
+      width: auto;
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+
+  .footer__item {
+    margin-bottom: 10px;
+  }
+
+  .footer__copyright {
+
+    .footer__text {
+      color: #BDBDBD;
+      font-size: 14px;
+      text-align: center;
+    }
+
+    .footer__link {
+      width: auto;
+      color: #48B29E;
+      text-decoration: none;
+    }
+  }
+
+  .footer__content {
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 0 10px;
+    max-width: $smallContainer;
+  }
+
+  .footer__content_justify {
+    text-align: justify;
+
+    &:after {
+      content: '';
+      width: 100%;
+      text-align: justify;
+      display: inline-block;
+    }
+  }
+
+  .footer__info {
+    float: left;
+
+    .footer__logo {
+      margin-right: 1px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    .footer__phone {
+      margin-left: 6px;
+      position: relative;
+      padding-left: 15px;
+      margin-right: 10px;
+      vertical-align: middle;
+      display: inline-block;
+
+      &:before {
+        top: 0;
+        left: 0;
+        border: 0;
+        content: '';
+        position: absolute;
+        display: inline-block;
+        border-top: 15px solid #56CCF2;
+        border-left: 16px solid transparent;
+      }
+    }
+
+    .footer__text {
+      color: #fff;
+      width: 216px;
+      height: 40px;
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 40px;
+      text-align: center;
+      display: inline-block;
+      vertical-align: middle;
+      background-color: #56CCF2;
+    }
+
+    .footer__slogan {
+      width: 350px;
+      font-size: 18px;
+      font-weight: normal;
+      display: inline-block;
+      vertical-align: middle;
+      color: $regularTextColor;
+    }
+
+  }
+
+  .footer__contacts {
+    float: right;
+    line-height: 40px;
+    
+    .footer__link {
+      margin-left: 5px;
+      text-align: center;
+      line-height: 40px;
+      vertical-align: middle;
+    }
+  }
+
+  .footer__link_email {
+    color: #fff;
+    width: 149px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: $orangered;
+  }
+
+  .footer__link_vk {
+    width: 40px;
+    height: 40px;
+    background-color: #4E75A0;
+
+    .footer__image {
+      width: 20px;
+      height: 16px;
+      vertical-align: middle;
+    }
+  }
+
+  .footer__link_fb {
+    width: 40px;
+    height: 40px;
+    background-color: #395799;
+
+    .footer__image {
+      width: 14px;
+      height: 20px;
+      vertical-align: middle;
+    }
+  }
+
 }
