--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -3,6 +3,9 @@
 
 // Variables
 $screenWidth: 1280px;
+$regularDesktop: 1000px;
+$tabletExtension: 750px;
+$phabletExtension: 550px;
 $smallContainer: 1034px;
 
 $aqua: #00BEAE;
@@ -262,14 +265,13 @@ html, body {
     position: relative;
   }
 
-  // fix: maybe it should be deleted
-  .content__section {
-    margin: 0;
-    padding: 0;
-
-    display: inline-block;
-    width: 100%;
-  }
+  //.content__section {
+  //  margin: 0;
+  //  padding: 0;
+  //
+  //  display: inline-block;
+  //  width: 100%;
+  //}
 
   // Section
   .section {
@@ -318,17 +320,23 @@ html, body {
     width: 24px;
     height: 24px;
     line-height: 30px;
-    font-size: 25px;
+    font-size: 24px;
     position: absolute;
     margin-top: 6px;
     margin-left: 8px;
   }
 
   .section__mark_small {
+    //width: 16px;
+    //height: 16px;
+    //margin-right: 5px;
+    //font-size:18px;
     width: 16px;
+    text-align: center;
+    line-height: 23px;
     height: 16px;
     margin-right: 5px;
-    font-size:18px;
+    font-size: 18px;
   }
 
   .section_slider {
@@ -364,7 +372,7 @@ html, body {
     }
 
     .section__link {
-      width: 18.046875%;
+      //width: 18.046875%;
       margin-right: 20px;
 
       &:last-of-type {
@@ -581,6 +589,62 @@ html, body {
     }
   }
 
+  @media (max-width: $regularDesktop) {
+    .section_organizations .section__content {
+      margin-bottom: 0;
+    }
+
+    .section_info {
+      .section__content {
+        float: none;
+        margin-bottom: 18px;
+      }
+
+      .section__content_right {
+        float: none;
+        margin-bottom: 0;
+        text-align: center;
+      }
+    }
+  }
+
+  @media (max-width: $tabletExtension) {
+    .section__header {
+      font-size: 24px;
+    }
+
+    .section_countries {
+      .section__link {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 22px;
+      }
+    }
+
+    .section_info {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .section_organizations .section__content {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (max-width: $phabletExtension) {
+    .section_promo {
+      padding-bottom: 20px;
+
+      .section__content {
+        margin-bottom: 20px;
+      }
+    }
+
+    .section__link {
+      width: 100%;
+    }
+  }
+
   // Article
   .article {
     text-align: center;
@@ -608,7 +672,7 @@ html, body {
 
   .article_country {
     //max-width: 231px;
-    width: 100%;
+    width: 231px;
     max-height: 231px;
     vertical-align: top;
     padding: 94px 0 60px 0;
@@ -863,6 +927,79 @@ html, body {
       font-size: 14px;
       font-weight: normal;
       color: $regularTextColor;
+    }
+  }
+
+  @media (max-width: $regularDesktop) {
+    .article_patients {
+      margin-right: 0;
+      margin-bottom: 5px;
+    }
+
+    .article_organization {
+      margin-bottom: 20px;
+    }
+
+    .article_review {
+      margin: 5px 20px;
+
+      &:last-of-type {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  @media (max-width: $tabletExtension) {
+    .article_organization {
+      margin-bottom: 15px;
+    }
+
+    .article_promo {
+      margin-right: 0;
+    }
+  }
+
+  @media (max-width: $phabletExtension) {
+    .article_promo {
+      margin-bottom: 15px;
+    }
+
+    .article_country {
+      width: 100%;
+    }
+
+    .article_treatment {
+      width: 100%;
+      border: 0;
+    }
+
+    .article_patients{
+      margin-bottom: 15px;
+
+      .article__pic {
+        margin: 0 auto;
+        margin-bottom: 15px;
+      }
+
+      .article__title {
+        text-align: center;
+      }
+
+      .article__text {
+        text-align: center;
+      }
+    }
+
+    .article_review {
+      width: auto;
+      
+      .article__rating {
+        position: static;
+      }
+
+      .article__content {
+        margin-bottom: 5px;
+      }
     }
   }
 
@@ -1197,6 +1334,48 @@ html, body {
       width: 14px;
       height: 20px;
       vertical-align: middle;
+    }
+  }
+
+  @media (max-width: $regularDesktop) {
+    .footer__info {
+      width: 52%;
+    }
+  }
+
+  @media (max-width: $tabletExtension) {
+    .footer__info .footer__text {
+      width: auto;
+      font-size: 14px;
+      padding: 0 10px;
+    }
+
+    .footer__list {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (max-width: $phabletExtension) {
+    .footer__info {
+      display: none;
+    }
+
+    .footer__contacts {
+      float: none;
+      //text-align: center;
+    }
+
+    .footer__menu {
+      padding-top: 30px;
+      padding-bottom: 0px;
+    }
+    
+    .footer__content_justify {
+      //text-align: center;
+    }
+    
+    .footer__list {
+      display: block;
     }
   }
 
